fix: fixed typos in LT text

--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -70,11 +70,11 @@
         "lspFull": "Lietuvos studento pažymėjimas"
     },
     "fsanames": {
-        "vivat": "Cheminės techologijos fakulteto studentų atstovybė ",
+        "vivat": "Cheminės technologijos fakulteto studentų atstovybė ",
         "fumsa": "Matematikos ir gamtos mokslų fakulteto studentų atstovybė ",
         "indi": "Mechanikos inžinerijos ir dizaino fakulteto atstovybė ",
         "shm": "Socialinių, humanitarinių mokslų ir menų fakulteto studentų atstovybė ",
-        "statius": "Statybos ir architetūros fakulteto studentų atstovybė ",
+        "statius": "Statybos ir architektūros fakulteto studentų atstovybė ",
         "vfsa": "Ekonomikos ir verslo fakulteto studentų atstovybė ",
         "esa": "Elektros ir elektronikos fakulteto studentų atstovybė ",
         "infosa": "Informatikos fakulteto studentų atstovybė "
