--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -7,7 +7,9 @@
     "shareToFb": "Share to Facebook",
     "shareToLinkedIn": "Share to LinkedIn",
     "notFound": "404 Content not found",
-    "goBack": "Go back"
+    "goBack": "Go back",
+    "noData": "Currently there is no data here!",
+    "tryAgain": "Try again later!"
   },
   "home": 
   {
