--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -6,7 +6,9 @@
         "shareToFb": "Pasidalink Facebook platformoje",
         "shareToLinkedIn": "Pasidalink LinkedIn platformoje",
         "notFound": "404 Turinys nerastas",
-        "goBack": "Grįžti atgal"
+        "goBack": "Grįžti atgal",
+        "noData": "Šiuo metu duomenų nėra!",
+        "tryAgain": "Pabandykite vėliau!"
     },
     "home": {
         "text": "Organizacija siekianti vieno tikslo – ginti visų studentų interesus, sprendžiant šiandienos ir rytojaus iššūkius.",
