Feat: added navigation bubbles

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -26,7 +26,7 @@
     "fsa": "Find your faculty's student association",
     "fsaFull": "Faculty's student association",
     "aboutUs": "About us",
-    "follow": "FOLLOW US ON SOCIAL MEDIA",
+    "follow": "Follow us on social media",
     "documents": "Documents",
     "findFaq": "Find answers to your questions",
     "activityReports": "Find out what we did",
