--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -23,7 +23,7 @@
         "fsa": "Raskite savo fakulteto studentų atstovybę",
         "fsaFull": "Fakultetinės studentų atstovybės",
         "aboutUs": "Apie mus",
-        "follow": "SEKITE MUS SOCIALINIUOSE TINKLUOSE",
+        "follow": "Sekite mus socialiniuose tinkluose",
         "documents": "Dokumentai",
         "findFaq": "Rask atsakymus į savo klausimus",
         "activityReports": "Sužinok apie mūsų veiklas",
