Fix: fixed by ktu wanted comments

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -66,6 +66,7 @@
       "description": "KTU SA offers support and resources for any challenges you face. We're here to help you succeed.",
       "duk": "FAQ",
       "socialHelp": "Social Help",
+      "EmotionalHelp": "Emotional Help",
       "academicHelp": "Academic Help"
     },
     "representation": 
