--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -58,6 +58,7 @@
             "description":"KTU SA siūlo pagalba bet kokiems iššūkiams, su kuriais susiduriate. Esame čia, kad padėtume jums būti sėkmingais.",
             "duk": "DUK",
             "socialHelp": "Socialinė pagalba",
+            "EmotionalHelp": "Emocinė pagalba",
             "academicHelp": "Akademinė pagalba"
         },
         "representation":{
