Refactor SEO metadata generation and improve API error handling
- Introduced a new utility function `buildPageMetadata` to standardize SEO metadata generation across various pages using hero section data.
- Updated `generateMetadata` functions in multiple pages to utilize the new `buildPageMetadata` function for cleaner code and consistency.
- Added error handling for API calls in several services to log errors and return default values when requests fail.
- Enhanced the layout component to include structured data (JSON-LD) for better SEO.
- Improved the sitemap generation to include static pages and dynamic entries for articles and events.
- Updated translations for SEO titles and descriptions in both English and Lithuanian.
- Minor code style improvements and optimizations across various components.

--- a/KTU-SA-WEB/locales/en.json
+++ b/KTU-SA-WEB/locales/en.json
@@ -139,5 +139,9 @@
   },
   "activityReports": {
     "activityReport": "Activity report"
+  },
+  "seo": {
+    "homeTitle": "KTU Students' Union – Representing All Students",
+    "homeDescription": "KTU Students' Union (KTU SA) represents all Kaunas University of Technology students. Find news, events, academic help, scholarships, and student resources."
   }
 }
