fix: sponsor layout

--- a/KTU-SA-WEB/locales/en.json
+++ b/KTU-SA-WEB/locales/en.json
@@ -146,7 +146,7 @@
     "activityReport": "Activity report"
   },
   "seo": {
-    "homeTitle": "KTU Students' Union – Representing All Students",
-    "homeDescription": "KTU Students' Union (KTU SA) represents all Kaunas University of Technology students. Find news, events, academic help, scholarships, and student resources."
+    "homeTitle": "KTU Students' Association – Representing All Students",
+    "homeDescription": "KTU Students' Association (KTU SA) represents all Kaunas University of Technology students. Find news, events, academic help, scholarships, and student resources."
   }
 }
